crates/hxy-010-lang/tests/snapshots/parser_snapshots__arithmetic_precedence.snap
---
source: crates/hxy-010-lang/tests/parser_snapshots.rs
expression: ast
---
Program {
    items: [
        Stmt(
            Expr {
                expr: Binary {
                    op: Sub,
                    lhs: Binary {
                        op: Add,
                        lhs: IntLit {
                            value: 1,
                            span: Span {
                                start: 0,
                                end: 1,
                            },
                        },
                        rhs: Binary {
                            op: Mul,
                            lhs: IntLit {
                                value: 2,
                                span: Span {
                                    start: 4,
                                    end: 5,
                                },
                            },
                            rhs: IntLit {
                                value: 3,
                                span: Span {
                                    start: 8,
                                    end: 9,
                                },
                            },
                            span: Span {
                                start: 4,
                                end: 9,
                            },
                        },
                        span: Span {
                            start: 0,
                            end: 9,
                        },
                    },
                    rhs: IntLit {
                        value: 4,
                        span: Span {
                            start: 12,
                            end: 13,
                        },
                    },
                    span: Span {
                        start: 0,
                        end: 13,
                    },
                },
                span: Span {
                    start: 0,
                    end: 14,
                },
            },
        ),
    ],
}
