crates/hxy-010-lang/tests/snapshots/parser_snapshots__assignment_right_associative.snap
---
source: crates/hxy-010-lang/tests/parser_snapshots.rs
expression: ast
---
Program {
    items: [
        Stmt(
            Expr {
                expr: Assign {
                    op: Assign,
                    target: Ident {
                        name: "a",
                        span: Span {
                            start: 0,
                            end: 1,
                        },
                    },
                    value: Assign {
                        op: Assign,
                        target: Ident {
                            name: "b",
                            span: Span {
                                start: 4,
                                end: 5,
                            },
                        },
                        value: Ident {
                            name: "c",
                            span: Span {
                                start: 8,
                                end: 9,
                            },
                        },
                        span: Span {
                            start: 4,
                            end: 9,
                        },
                    },
                    span: Span {
                        start: 0,
                        end: 9,
                    },
                },
                span: Span {
                    start: 0,
                    end: 10,
                },
            },
        ),
    ],
}
