crates/hxy-010-lang/tests/snapshots/parser_snapshots__expr_stmt_literal.snap
---
source: crates/hxy-010-lang/tests/parser_snapshots.rs
expression: ast
---
Program {
    items: [
        Stmt(
            Expr {
                expr: IntLit {
                    value: 42,
                    span: Span {
                        start: 0,
                        end: 2,
                    },
                },
                span: Span {
                    start: 0,
                    end: 3,
                },
            },
        ),
    ],
}
