crates/hxy-010-lang/tests/snapshots/parser_snapshots__field_decl_simple.snap
---
source: crates/hxy-010-lang/tests/parser_snapshots.rs
expression: ast
---
Program {
    items: [
        Stmt(
            FieldDecl {
                modifier: Field,
                ty: TypeRef {
                    name: "uchar",
                    span: Span {
                        start: 0,
                        end: 5,
                    },
                },
                name: "x",
                array_size: None,
                args: [],
                bit_width: None,
                init: None,
                attrs: Attrs(
                    [],
                ),
                span: Span {
                    start: 0,
                    end: 7,
                },
            },
        ),
    ],
}
