crates/hxy-010-lang/tests/snapshots/parser_snapshots__member_and_call.snap
---
source: crates/hxy-010-lang/tests/parser_snapshots.rs
expression: ast
---
Program {
    items: [
        Stmt(
            Expr {
                expr: Call {
                    callee: Member {
                        target: Member {
                            target: Ident {
                                name: "obj",
                                span: Span {
                                    start: 0,
                                    end: 3,
                                },
                            },
                            field: "field",
                            span: Span {
                                start: 0,
                                end: 9,
                            },
                        },
                        field: "method",
                        span: Span {
                            start: 0,
                            end: 16,
                        },
                    },
                    args: [
                        IntLit {
                            value: 1,
                            span: Span {
                                start: 17,
                                end: 18,
                            },
                        },
                        IntLit {
                            value: 2,
                            span: Span {
                                start: 20,
                                end: 21,
                            },
                        },
                    ],
                    span: Span {
                        start: 0,
                        end: 22,
                    },
                },
                span: Span {
                    start: 0,
                    end: 23,
                },
            },
        ),
    ],
}
